--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,5 +124,9 @@ extra_javascript:
 # You can erase this if you want. If you erase this, Mkdocs will alphabetically sort your documentation
 nav:
 - Overview: index.md
-- Extensions Installed Overview: extensions.md
-- Automatic Site Deployment: github-action.md
+- Writing Markdown: writing_markdown.md
+- Flavoured Markdown: flavoured_markdown.md
+- Deployment and Automated Site Deployment: deployment_and_automated_site_deployment.md
+# You can also create folder/file structure by following this syntax
+# - Folder:
+#   - Files : <Insert File here>
