added contributions page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,6 +127,7 @@ nav:
 - Writing Markdown: writing_markdown.md
 - Flavoured Markdown: flavoured_markdown.md
 - Deployment and Automated Site Deployment: deployment_and_automated_site_deployment.md
+- Contributions: contributions.md
 # You can also create folder/file structure by following this syntax
 # - Folder:
 #   - Files : <Insert File here>
